--- a/index.html
+++ b/index.html
@@ -6,25 +6,102 @@
     <title>Trivia APC Madrid</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; background: #f4f4f4; transition: background 0.3s; }
-        .dark-mode { background: #222; color: #fff; }
-        svg { width: 90vw; height: auto; margin: auto; display: block; }
-        .apc { fill: lightgray; stroke: black; stroke-width: 0.5px; cursor: pointer; transition: fill 0.3s ease, transform 0.2s ease; }
-        .correct { fill: green !important; }
-        .incorrect { fill: red !important; }
-        .highlight { fill: yellow !important; }
-        .hidden { display: none; }
-        button { padding: 10px; margin: 10px; cursor: pointer; }
+        body { 
+            font-family: Arial, sans-serif; 
+            background: #f4f4f4; 
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            overflow: hidden;
+        }
+
+        header {
+            background-color: #222;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 10;
+        }
+
+        h1, h2 {
+            margin: 0;
+            font-size: 1.5em;
+        }
+
+        #map-container {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-top: 80px;
+            overflow: hidden;
+            width: 100%;
+        }
+
+        svg {
+            max-width: 100%;
+            max-height: 90vh;
+            width: auto;
+            height: auto;
+        }
+
+        .controls {
+            margin-top: 10px;
+        }
+
+        .dark-mode, .reset {
+            padding: 10px 20px;
+            margin: 10px;
+            cursor: pointer;
+            font-size: 1em;
+            background-color: #333;
+            color: white;
+            border: none;
+            border-radius: 5px;
+        }
+
+        .dark-mode:hover, .reset:hover {
+            background-color: #555;
+        }
+
+        .hidden {
+            display: none;
+        }
+
+        #logro {
+            font-size: 1.5em;
+            margin-top: 10px;
+            color: gold;
+            display: inline-block;
+            padding: 10px;
+            background-color: #222;
+            border-radius: 5px;
+        }
+        
+        .dark-mode-active {
+            background-color: #222;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
+    <header>
+        <h1>Trivia APC Madrid</h1>
+        <h2 id="question">Cargando...</h2>
+        <p>Puntuación: <span id="score">0</span> | Aciertos seguidos: <span id="combo">0</span></p>
+        <div class="controls">
+            <button class="dark-mode" onclick="toggleDarkMode()">🌙 Modo oscuro</button>
+            <button class="reset" onclick="reset()">Reset</button>
+        </div>
+    </header>
 
-    <h1>Trivia APC Madrid</h1>
-    <h2 id="question">Cargando...</h2>
-    <p>Puntuación: <span id="score">0</span> | Aciertos seguidos: <span id="combo">0</span></p>
-    <button onclick="toggleDarkMode()">🌙 Modo oscuro</button>
-    <button onclick="reset()">Reset</button>
     <div id="map-container"></div>
+    
     <p id="logro" class="hidden">🏆 ¡Logro desbloqueado!</p>
 
     <script>
