--- a/index.html
+++ b/index.html
@@ -15,22 +15,24 @@
             flex-direction: column;
             height: 100vh;
             overflow: hidden;
+            align-items: center;
         }
 
         header {
             background-color: #222;
             color: white;
             text-align: center;
-            padding: 20px;
+            padding: 15px;
             position: fixed;
             top: 0;
-            width: 100%;
+            left: 0;
+            right: 0;
             z-index: 10;
         }
 
         h1, h2 {
             margin: 0;
-            font-size: 1.5em;
+            font-size: 1.3em;
         }
 
         #map-container {
@@ -44,10 +46,9 @@
         }
 
         svg {
-            max-width: 100%;
-            max-height: 90vh;
-            width: auto;
+            width: 90vw;
             height: auto;
+            max-height: 85vh;
         }
 
         .controls {
@@ -55,8 +56,8 @@
         }
 
         .dark-mode, .reset {
-            padding: 10px 20px;
-            margin: 10px;
+            padding: 8px 15px;
+            margin: 8px;
             cursor: pointer;
             font-size: 1em;
             background-color: #333;
@@ -74,10 +75,9 @@
         }
 
         #logro {
-            font-size: 1.5em;
+            font-size: 1.2em;
             margin-top: 10px;
             color: gold;
-            display: inline-block;
             padding: 10px;
             background-color: #222;
             border-radius: 5px;
@@ -87,9 +87,27 @@
             background-color: #222;
             color: #fff;
         }
+
+        @media (max-width: 600px) {
+            header {
+                font-size: 0.9em;
+                padding: 10px;
+            }
+
+            svg {
+                width: 95vw;
+                max-height: 80vh;
+            }
+
+            .dark-mode, .reset {
+                padding: 6px 10px;
+                font-size: 0.9em;
+            }
+        }
     </style>
 </head>
 <body>
+
     <header>
         <h1>Trivia APC Madrid</h1>
         <h2 id="question">Cargando...</h2>
