--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <title>Trivia APC Madrid</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            background: #f4f4f4; 
+        body {
+            font-family: Arial, sans-serif;
+            background: #f4f4f4;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
             height: 100vh;
-            overflow: hidden;
             align-items: center;
+            overflow-y: auto;
         }
 
         header {
@@ -43,7 +43,7 @@
             padding-top: 80px;
             overflow: hidden;
             width: 100%;
-        }
+            touch-action: none;
 
         svg {
             width: 90vw;
@@ -146,6 +146,11 @@
              "Villaconejos", "Villalbilla", "Villamanta", "Villamantilla", "Villanueva de la Cañada",
              "Villanueva del Pardillo", "Villanueva de Perales", "Villaviciosa de Odón", "Tres Cantos" ];
 
+        document.addEventListener('touchstart', function(event) {
+           if (event.target.closest("#map-container")) {
+                event.preventDefault();
+            }
+        }, { passive: false });
         if (localStorage.getItem("dark-mode") === "true") { document.body.classList.toggle("dark-mode"); }
         let clickDisabled = false;
         let tries = 0;
