--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         flex-direction: column;
         height: 100vh;
         align-items: center;
-        overflow: hidden; /* Restaurado */
+        overflow: hidden;
         transition: background 0.3s;
     }
 
@@ -50,7 +50,7 @@
         height: 100%;
         max-height: calc(100vh - 80px);
         padding-top: 80px;
-        overflow: hidden; /* Restaurado */
+        overflow: hidden;
         touch-action: none;
     }
 
@@ -97,7 +97,6 @@
         color: #fff;
     }
 
-    /* Solución para el bug del color en PC */
     html, body {
         background-color: #f4f4f4 !important;
     }
