--- a/index.html
+++ b/index.html
@@ -6,134 +6,25 @@
     <title>Trivia APC Madrid</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    body {
-        font-family: Arial, sans-serif;
-        background: #f4f4f4;
-        display: flex;
-        flex-direction: column;
-        height: 100vh;
-        align-items: center;
-        overflow-y: auto; /* Se vuelve a permitir el scroll */
-        transition: background 0.3s;
-    }
-
-    body.dark-mode {
-        background: #222;
-        color: white;
-    }
-
-    header {
-        width: 100%;
-        background: #222;
-        color: white;
-        padding: 15px;
-        text-align: center;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        z-index: 10;
-    }
-
-    h1, h2 {
-        margin: 0;
-        font-size: 1.3em;
-    }
-
-    #map-container {
-        flex: 1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-        max-height: calc(100vh - 80px);
-        padding-top: 80px;
-        overflow: hidden;
-        touch-action: none;
-    }
-
-    svg {
-        width: 90vw;
-        height: auto;
-        max-height: 85vh;
-    }
-
-    .controls {
-        margin-top: 10px;
-    }
-
-    .dark-mode, .reset {
-        padding: 8px 15px;
-        margin: 8px;
-        cursor: pointer;
-        font-size: 1em;
-        background-color: #333;
-        color: white;
-        border: none;
-        border-radius: 5px;
-    }
-
-    .dark-mode:hover, .reset:hover {
-        background-color: #555;
-    }
-
-    .hidden {
-        display: none;
-    }
-
-    #logro {
-        font-size: 1.2em;
-        margin-top: 10px;
-        color: gold;
-        padding: 10px;
-        background-color: #222;
-        border-radius: 5px;
-    }
-
-    .dark-mode-active {
-        background-color: #222;
-        color: #fff;
-    }
-
-    @media (max-width: 600px) {
-        header {
-            font-size: 0.9em;
-            padding: 10px;
-        }
-
-        svg {
-            width: 95vw;
-            max-height: 80vh;
-        }
-
-        .dark-mode, .reset {
-            padding: 6px 10px;
-            font-size: 0.9em;
-        }
-    }
-</style>
+        body { font-family: Arial, sans-serif; text-align: center; background: #f4f4f4; transition: background 0.3s; }
+        .dark-mode { background: #222; color: #fff; }
+        svg { width: 90vw; height: auto; margin: auto; display: block; }
+        .apc { fill: lightgray; stroke: black; stroke-width: 0.5px; cursor: pointer; transition: fill 0.3s ease, transform 0.2s ease; }
+        .correct { fill: green !important; }
+        .incorrect { fill: red !important; }
+        .highlight { fill: yellow !important; }
+        .hidden { display: none; }
+        button { padding: 10px; margin: 10px; cursor: pointer; }
+    </style>
 </head>
 <body>
 
-    <header>
-        <h1>Trivia APC Madrid</h1>
-        <h2 id="question">Cargando...</h2>
-        <p>Puntuación: <span id="score">0</span> | Aciertos seguidos: <span id="combo">0</span></p>
-        <div class="controls">
-            <button class="dark-mode" onclick="toggleDarkMode()">🌙 Modo oscuro</button>
-            <button class="reset" onclick="reset()">Reset</button>
-        </div>
-    </header>
-
+    <h1>Trivia APC Madrid</h1>
+    <h2 id="question">Cargando...</h2>
+    <p>Puntuación: <span id="score">0</span> | Aciertos seguidos: <span id="combo">0</span></p>
+    <button onclick="toggleDarkMode()">🌙 Modo oscuro</button>
+    <button onclick="reset()">Reset</button>
     <div id="map-container"></div>
-    
     <p id="logro" class="hidden">🏆 ¡Logro desbloqueado!</p>
 
     <script>
@@ -160,11 +51,6 @@
              "Villaconejos", "Villalbilla", "Villamanta", "Villamantilla", "Villanueva de la Cañada",
              "Villanueva del Pardillo", "Villanueva de Perales", "Villaviciosa de Odón", "Tres Cantos" ];
 
-        document.addEventListener('touchstart', function(event) {
-           if (event.target.closest("#map-container")) {
-                event.preventDefault();
-            }
-        }, { passive: false });
         if (localStorage.getItem("dark-mode") === "true") { document.body.classList.toggle("dark-mode"); }
         let clickDisabled = false;
         let tries = 0;
