--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <style>
         body { font-family: Arial, sans-serif; text-align: center; background: #f4f4f4; transition: background 0.3s; }
         .dark-mode { background: #222; color: #fff; }
-        svg { width: 90vw; height: auto; margin: auto; display: block; }
+        svg { max-width: 100%; max-height: 100%; width: auto; height: auto; }
+        #map-container { width: 100vw; height: 80vh; display: flex; justify-content: center; align-items: center; }
         .apc { fill: lightgray; stroke: black; stroke-width: 0.5px; cursor: pointer; transition: fill 0.3s ease, transform 0.2s ease; }
         .correct { fill: green !important; }
         .incorrect { fill: red !important; }
@@ -62,6 +63,33 @@
         document.getElementById("score").innerText = score;
         document.getElementById("combo").innerText = combo;
 
+        function adjustMapSize() {
+            let svg = document.querySelector("#map-container svg");
+            if (!svg) return;
+
+            let isMobile = window.innerWidth < 768;
+            let container = document.getElementById("map-container");
+
+            if (isMobile) {
+                svg.style.width = "90vw";
+                svg.style.height = "auto";
+            } else {
+                let aspectRatio = svg.viewBox.baseVal.width / svg.viewBox.baseVal.height;
+                let newWidth = window.innerWidth * 0.9;
+                let newHeight = newWidth / aspectRatio;
+
+                if (newHeight > window.innerHeight * 0.8) {
+                    newHeight = window.innerHeight * 0.8;
+                    newWidth = newHeight * aspectRatio;
+                }
+
+                svg.style.width = `${newWidth}px`;
+                svg.style.height = `${newHeight}px`;
+            }
+        }
+
+        window.addEventListener("resize", adjustMapSize);
+
         function next() {
             clickDisabled = false;
             if (left.length > 0) {
@@ -101,6 +129,7 @@
             .then(svgData => {
                 requestIdleCallback(() => {
                     document.getElementById("map-container").innerHTML = svgData;
+                    adjustMapSize();
                     let svg = d3.select("#map-container svg");
                     svg.selectAll("path")
                         .filter(function() {
