--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         if (isMobile) {
             svg.style.width = "100vw";
             svg.style.height = "auto"; 
-            /*svg.style.marginLeft = "auto";
-            svg.style.marginRight = "auto";*/
+            svg.style.marginLeft = "-20px";
+            /*svg.style.marginRight = "auto";*/
             svg.style.display = "block";
         } else {
             let aspectRatio = svg.viewBox.baseVal.width / svg.viewBox.baseVal.height;
