--- a/index.html
+++ b/index.html
@@ -89,16 +89,19 @@
                 svg.style.height = `${newHeight}px`;
                 svg.style.marginTop = "-40px";
             }*/
-            if (isMobile) {
+            // Obtener la altura de los encabezados dinámicamente
+const headerHeight = document.querySelector("h1").offsetHeight + document.querySelector("h2").offsetHeight + 20;
+
+if (isMobile) {
     svg.style.width = "95vw";
     svg.style.height = "auto";
     svg.style.display = "block";
     
-    // 🔹 Asegurar centrado horizontal y vertical en móviles
+    // 🔹 Ajustar el centrado teniendo en cuenta el encabezado
     svg.style.position = "absolute";
-    svg.style.top = "50%";
+    svg.style.top = `${headerHeight}px`;  // Espacio suficiente para los títulos
     svg.style.left = "50%";
-    svg.style.transform = "translate(-50%, -55%)"; // Ajuste fino para centrar mejor
+    svg.style.transform = "translateX(-50%)";  // Solo centrado horizontal
 } else {
     let aspectRatio = svg.viewBox.baseVal.width / svg.viewBox.baseVal.height;
     let newWidth = window.innerWidth * 0.9;
@@ -112,11 +115,11 @@
     svg.style.width = `${newWidth}px`;
     svg.style.height = `${newHeight}px`;
     
-    // 🔹 Centrar correctamente en PC sin margen fijo
+    // 🔹 Ajuste para evitar que el mapa suba demasiado
     svg.style.position = "absolute";
-    svg.style.top = "50%";
+    svg.style.top = `${headerHeight + 10}px`;  // Baja el mapa lo suficiente
     svg.style.left = "50%";
-    svg.style.transform = "translate(-50%, -50%)"; // Centrado total
+    svg.style.transform = "translateX(-50%)";  // Solo centrado horizontal
 }
         }
 
