--- a/index.html
+++ b/index.html
@@ -64,41 +64,39 @@
         document.getElementById("combo").innerText = combo;
         // Esperar a que todo se cargue bien antes de calcular posiciones
 window.addEventListener("load", () => {
-    const header = document.querySelector("h1");
-    const subheader = document.querySelector("h2");
-    const buttons = document.querySelectorAll("button");
-    const mapContainer = document.getElementById("map-container");
-    const svg = document.querySelector("#map-container svg");
+    // Obtener la altura total del bloque superior
+const headerContainer = document.querySelector("body > h1");  // Primer encabezado
+const headerBottom = headerContainer.getBoundingClientRect().bottom; // Fin del bloque de encabezado
 
-    if (!header || !subheader || !svg) return; // Si falta algo, no hacer nada
+if (isMobile) {
+    svg.style.width = "95vw";
+    svg.style.height = "auto";
+    svg.style.display = "block";
 
-    // 🔹 Obtener la altura total de los elementos superiores
-    let headerHeight = header.offsetHeight + subheader.offsetHeight;
-    buttons.forEach(btn => { headerHeight += btn.offsetHeight + 10; }); // Sumar botones + margen
+    // 🔹 Ajustar el mapa justo debajo del encabezado
+    svg.style.position = "absolute";
+    svg.style.top = `${headerBottom + 10}px`;  // Espacio extra para separación
+    svg.style.left = "50%";
+    svg.style.transform = "translateX(-50%)";
+} else {
+    let aspectRatio = svg.viewBox.baseVal.width / svg.viewBox.baseVal.height;
+    let newWidth = window.innerWidth * 0.9;
+    let newHeight = newWidth / aspectRatio;
 
-    if (isMobile) {
-        svg.style.width = "95vw";
-        svg.style.height = "auto";
-        svg.style.display = "block";
-        
-        // 🔹 Asegurar que el mapa esté debajo de los encabezados
-        mapContainer.style.paddingTop = `${headerHeight + 10}px`;  
-    } else {
-        let aspectRatio = svg.viewBox.baseVal.width / svg.viewBox.baseVal.height;
-        let newWidth = window.innerWidth * 0.9;
-        let newHeight = newWidth / aspectRatio;
-
-        if (newHeight > window.innerHeight * 0.75) {
-            newHeight = window.innerHeight * 0.75;
-            newWidth = newHeight * aspectRatio;
-        }
-
-        svg.style.width = `${newWidth}px`;
-        svg.style.height = `${newHeight}px`;
-
-        // 🔹 Evitar que se suba demasiado en PC
-        mapContainer.style.paddingTop = `${headerHeight + 20}px`;  
+    if (newHeight > window.innerHeight * 0.75) {
+        newHeight = window.innerHeight * 0.75;
+        newWidth = newHeight * aspectRatio;
     }
+
+    svg.style.width = `${newWidth}px`;
+    svg.style.height = `${newHeight}px`;
+
+    // 🔹 Ajuste para que el mapa quede justo debajo de los encabezados
+    svg.style.position = "absolute";
+    svg.style.top = `${headerBottom + 20}px`;  // Espacio extra para separación en PC
+    svg.style.left = "50%";
+    svg.style.transform = "translateX(-50%)";
+}
 });
         /*function adjustMapSize() {
             let svg = document.querySelector("#map-container svg");
