--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     // Ajuste para la alineación vertical:
     let headerHeight = document.querySelector("header") ? document.querySelector("header").offsetHeight : 0;
     let svgHeight = svg.offsetHeight;
-    let verticalOffset = (window.innerHeight - svgHeight) / 2 - headerHeight;
+    let verticalOffset = (window.innerHeight - svgHeight) / 2 - headerHeight / 2;
 
     svg.style.top = `${verticalOffset}px`;
         }
