--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
     // Ajuste para la alineación vertical:
     let headerHeight = document.querySelector("header") ? document.querySelector("header").offsetHeight : 0;
     let svgHeight = svg.offsetHeight;
-    let verticalOffset = (window.innerHeight - svgHeight) / 2;// - headerHeight;
+    let verticalOffset = (window.innerHeight - svgHeight) / 2 - headerHeight;
 
     svg.style.top = `${verticalOffset}px`;
+            alert(verticalOffset);
         }
         /*function adjustMapSize() {
             let svg = document.querySelector("#map-container svg");
