--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ function adjustMapSize() {
     let verticalOffset = (window.innerHeight - svgHeight) / 2 - headerHeight;
 
     svg.style.top = `${verticalOffset}px`;
+    alert(verticalOffset);
 }
         
         /*function adjustMapSize() {
