--- a/index.html
+++ b/index.html
@@ -103,7 +103,33 @@ function adjustMapSize() {
 
     svg.style.top = `${verticalOffset}px`;
 }
-        
+        /*function adjustMapSize() {
+            let svg = document.querySelector("#map-container svg");
+            if (!svg) return;
+            let isMobile = window.innerWidth < 768;
+            let container = document.getElementById("map-container");
+            if (isMobile) {
+                svg.style.width = "95vw";
+                svg.style.height = "auto";
+                svg.style.display = "block";
+            } else {
+                let aspectRatio = svg.viewBox.baseVal.width / svg.viewBox.baseVal.height;
+                let newWidth = window.innerWidth * 0.9;
+                let newHeight = newWidth / aspectRatio;
+
+                if (newHeight > window.innerHeight * 0.75) {
+                    newHeight = window.innerHeight * 0.75;
+                    newWidth = newHeight * aspectRatio;
+                }
+
+                svg.style.width = `${newWidth}px`;
+                svg.style.height = `${newHeight}px`;
+            }
+            svg.style.position = "absolute";
+            svg.style.top = "50%";
+            svg.style.left = "50%";
+            svg.style.transform = "translate(-50%, -35%)";
+        }*/
         /*function adjustMapSize() {
             let svg = document.querySelector("#map-container svg");
             if (!svg) return;
