--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         document.getElementById("combo").innerText = combo;
 
         document.addEventListener('DOMContentLoaded', function () {
-    setTimeout(adjustMapSize, 100); // Pequeño retraso para asegurarse de que todo el contenido esté renderizado
+    //setTimeout(adjustMapSize, 100); // Pequeño retraso para asegurarse de que todo el contenido esté renderizado
 });
 
 function adjustMapSize() {
