--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ function adjustMapSize() {
             .then(svgData => {
                 requestIdleCallback(() => {
                     document.getElementById("map-container").innerHTML = svgData;
-                    //adjustMapSize();
+                    adjustMapSize();
                     let svg = d3.select("#map-container svg");
                     svg.selectAll("path")
                         .filter(function() {
