--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     svg.style.transform = "translateX(-50%)"; // Centrado horizontal
 
     // Ajuste de posición vertical
-    let availableHeight = window.innerHeight - mainHeight || 20;
+    let availableHeight = window.innerHeight - mainHeight || isMobile ? 20 : 30;
     let svgHeight = svg.getBoundingClientRect().height;
     let verticalOffset = mainHeight + (availableHeight - svgHeight) / 2;
 
