--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             svg.style.left = "50%";
             svg.style.transform = "translateX(-50%)";
 
-            let availableHeight = window.innerHeight - mainHeight || (isMobile ? 20 : 130);
+            let availableHeight = window.innerHeight - mainHeight;
             let svgHeight = svg.getBoundingClientRect().height;
             let verticalOffset = mainHeight + (availableHeight - svgHeight) / 2;
 
